# pedro_henrique_embarcatech_HBr_2025

./: README.md
Projetos/: README.md
Projetos/01_contador_decrescente/: 01_contador_decrescente.c  CMakeLists.txt  README.md
Projetos/01_contador_decrescente-01/old/: CMakeLists.txt  contador.h  main.c
Projetos/01_contador_decrescente/libs/display_oled/: display_oled.c  ssd1306.c
Projetos/02_leitura_joystick/: 02_leitura_joystick.c  CMakeLists.txt  README.md
Projetos/03_indicador_temperatura_micro/: 03_indicador_temperatura_micro.c  CMakeLists.txt  README.md
Projetos/03_indicador_temperatura_micro/libs/: ssd1306.c  ssd1306.h
Projetos/04_estruturacao_codigo/: CMakeLists.txt  README.md
Projetos/04_estruturacao_codigo/app/: main.c
Projetos/04_estruturacao_codigo/drivers/: led_embutido.c
Projetos/04_estruturacao_codigo/hal/: hal_led.c
Projetos/04_estruturacao_codigo/include/: hal_led.h  led_embutido.h
Projetos/05_teste_unitario/: .gitignore  CMakeLists.txt  README.md
Projetos/05_teste_unitario/app/: main.c
Projetos/05_teste_unitario/drivers/: adc_temp_sensor.c  adc_to_celsius.c
Projetos/05_teste_unitario/hal/: hal_temp_sensor.c
Projetos/05_teste_unitario/include/: adc_temp_sensor.h  adc_to_celsius.h  hal_temp_sensor.h
Projetos/05_teste_unitario/tests/: CMakeLists.txt  test_adc_to_celsius.c
Projetos/06_galton_board/: CMakeLists.txt  README.md  main.c
Projetos/06_galton_board/libs/: ssd1306.c  ssd1306.h
